# src/app/openapi-gen/model/orderUpdateDTO.ts
@@ -1,90 +1,87 @@
 /**
  * Supplier Rating Software API
  *
- * 
+ *
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 
-
-export interface OrderUpdateDTO { 
-    /**
-     * Mapped to NAME (Short description)
-     */
-    name: string;
-    /**
-     * Mapped to BESTELLUNG_HK (Vocabulary BESTELLUNGHK)
-     */
-    mainCategory: OrderUpdateDTO.MainCategoryEnum;
-    /**
-     * Mapped to BESTELLUNG_UK (Vocabulary BESTELLUNGFK)
-     */
-    subCategory: OrderUpdateDTO.SubCategoryEnum;
-    /**
-     * Mapped to BEZEICHNUNG
-     */
-    details?: string;
-    /**
-     * Mapped to RYTHMUS [sic!]
-     */
-    frequency?: string;
-    /**
-     * Mapped to ANSPRECHPERSON
-     */
-    contactPerson?: string;
-    /**
-     * Mapped to ANSPRECHPERSON_EMAIL
-     */
-    contactEmail?: string;
-    /**
-     * Mapped to ANSPRECHPERSON_TELEFON
-     */
-    contactPhone?: string;
-    /**
-     * Mapped to BESCHAFFUNGSGRUND
-     */
-    reason: string;
-    /**
-     * Mapped to BESTELLART
-     */
-    orderMethod?: string;
-    /**
-     * Mapped to BESTELLER (Name of initiator)
-     */
-    orderedBy: string;
-    /**
-     * Mapped to BESTELLDATUM (YYYY-MM-DD)
-     */
-    orderDate: string;
-    /**
-     * Mapped to LIEFERDATUM (YYYY-MM-DD)
-     */
-    deliveryDate?: string;
-    /**
-     * Mapped to KOMMENTAR (General comment)
-     */
-    orderComment?: string;
+export interface OrderUpdateDTO {
+  /**
+   * Mapped to NAME (Short description)
+   */
+  name: string;
+  /**
+   * Mapped to BESTELLUNG_HK (Vocabulary BESTELLUNGHK)
+   */
+  mainCategory: OrderUpdateDTO.MainCategoryEnum;
+  /**
+   * Mapped to BESTELLUNG_UK (Vocabulary BESTELLUNGFK)
+   */
+  subCategory: OrderUpdateDTO.SubCategoryEnum;
+  /**
+   * Mapped to BEZEICHNUNG
+   */
+  details?: string;
+  /**
+   * Mapped to RYTHMUS [sic!]
+   */
+  frequency?: string;
+  /**
+   * Mapped to ANSPRECHPERSON
+   */
+  contactPerson?: string;
+  /**
+   * Mapped to ANSPRECHPERSON_EMAIL
+   */
+  contactEmail?: string;
+  /**
+   * Mapped to ANSPRECHPERSON_TELEFON
+   */
+  contactPhone?: string;
+  /**
+   * Mapped to BESCHAFFUNGSGRUND
+   */
+  reason: string;
+  /**
+   * Mapped to BESTELLART
+   */
+  orderMethod?: string;
+  /**
+   * Mapped to BESTELLER (Name of initiator)
+   */
+  orderedBy: string;
+  /**
+   * Mapped to BESTELLDATUM (YYYY-MM-DD)
+   */
+  orderDate: string;
+  /**
+   * Mapped to LIEFERDATUM (YYYY-MM-DD)
+   */
+  deliveryDate?: string;
+  /**
+   * Mapped to KOMMENTAR (General comment)
+   */
+  orderComment?: string;
 }
 export namespace OrderUpdateDTO {
-    export const MainCategoryEnum = {
-        Beschaffung: 'Beschaffung',
-        Dienstleistung: 'Dienstleistung'
-    } as const;
-    export type MainCategoryEnum = typeof MainCategoryEnum[keyof typeof MainCategoryEnum];
-    export const SubCategoryEnum = {
-        Beratung: 'Beratung',
-        Dienstleistung: 'Dienstleistung',
-        GertWerkzeug: 'Gerät/Werkzeug',
-        Maschine: 'Maschine',
-        Messgerte: 'Messgeräte',
-        Messmittel: 'Messmittel',
-        PcHardware: 'PC Hardware',
-        PcSoftware: 'PC Software',
-        Prfmaschine: 'Prüfmaschine'
-    } as const;
-    export type SubCategoryEnum = typeof SubCategoryEnum[keyof typeof SubCategoryEnum];
+  export const MainCategoryEnum = {
+    Beschaffung: 'Beschaffung',
+    Dienstleistung: 'Dienstleistung',
+  } as const;
+  export type MainCategoryEnum = (typeof MainCategoryEnum)[keyof typeof MainCategoryEnum];
+  export const SubCategoryEnum = {
+    Beratung: 'Beratung',
+    Dienstleistung: 'Dienstleistung',
+    GertWerkzeug: 'Gerät/Werkzeug',
+    Maschine: 'Maschine',
+    Messgerte: 'Messgeräte',
+    Messmittel: 'Messmittel',
+    PcHardware: 'PC Hardware',
+    PcSoftware: 'PC Software',
+    Prfmaschine: 'Prüfmaschine',
+  } as const;
+  export type SubCategoryEnum = (typeof SubCategoryEnum)[keyof typeof SubCategoryEnum];
 }
-
-
